Attempts to solve Pippi image issue on mobile screens.

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ a.contact-link:hover {
     text-align: center;
     max-width: 400px;
     border-radius: 25px;
+    margin: auto;
     padding: 20px;
 }
 /* - - Projects Section - - */
